Revert "Updates after Claude changes"
This reverts commit ad387eeab9d6c56db9fc70f566d6f5126a3078bd.